fs stream method

--- a/day4_middleware/src/index.html
+++ b/day4_middleware/src/index.html
@@ -42,6 +42,9 @@
         <input type="submit" />
       </form>
     </div>
+    <div>
+     
+    </div>
     <!-- <form
       id="form"
       action="/single"
